--- a/paper/figures/2gram_frequencies.tex
+++ b/paper/figures/2gram_frequencies.tex
@@ -1,8 +1,10 @@
 \begin{table}[H]
     \centering
+    \caption{Top frequencies of two word phrases.}
+    \label{tab:2gram}
     \begin{tabular}{|l|ll|ll|ll|}
     \hline
-    Num & \multicolumn{2}{c|}{Vox}           & \multicolumn{2}{c|}{PBS}          & \multicolumn{2}{c|}{Fox} \\ \hline \hline
+    Num & \multicolumn{2}{c|}{Vox}           & \multicolumn{2}{c|}{PBS}          & \multicolumn{2}{c}{Fox} \\ \hline \hline
     1   & health care          & 1654 & white house        & 1683 & white house     & 556 \\
     2   & white house          & 743  & president donald   & 1297 & new york        & 359 \\
     3   & trump administration & 672  & donald trump       & 1035 & president trump & 318 \\
@@ -14,6 +16,4 @@
     9   & tax bill             & 376  & counsel robert     & 405  & donald trump    & 131 \\
     10  & federal government   & 365  & trump said         & 369  & state union     & 126 \\ \hline
     \end{tabular}
-    \caption{Top frequencies of two word phrases.}
-    \label{tab:2gram}
 \end{table}
