--- a/paper/figures/3gram_frequencies.tex
+++ b/paper/figures/3gram_frequencies.tex
@@ -2,9 +2,9 @@
 \begin{table}[H]
     \caption{Top frequencies of three word phrases.}
     \label{tab:3gram}
-    \begin{tabular}{|l|ll|ll|ll|}
+    \begin{tabular}{l|ll|ll|ll}
     \hline
-    Num & \multicolumn{2}{c|}{Vox}          & \multicolumn{2}{c|}{PBS}         & \multicolumn{2}{c|}{Fox}          \\ \hline \hline
+    Num & \multicolumn{2}{c|}{Vox}          & \multicolumn{2}{c|}{PBS}         & \multicolumn{2}{c}{Fox}          \\ \hline \hline
     1   & affordable care act         & 222 & president donald trump     & 785 & green new deal              & 143 \\ 
     2   & president donald trump      & 157 & special counsel robert     & 396 & house speaker nancy         & 81  \\ 
     3   & congressional budget office & 127 & majority leader mitch      & 179 & special counsel robert      & 72  \\
