--- a/paper/figures/word_frequencies.tex
+++ b/paper/figures/word_frequencies.tex
@@ -1,7 +1,9 @@
 \begin{table}[H]
     \centering
-    \begin{tabular}{|l|ll|ll|ll|} \hline
-    Num & \multicolumn{2}{c|}{Vox} & \multicolumn{2}{c|}{PBS} & \multicolumn{2}{c|}{Fox} \\ \hline \hline
+    \caption{Word Frequencies}
+    \label{tab:1gram}
+    \begin{tabular}{l|ll|ll|ll} \hline
+    Num & \multicolumn{2}{c|}{Vox} & \multicolumn{2}{c|}{PBS} & \multicolumn{2}{c}{Fox} \\ \hline \hline
     1   & trump       & 5446 & trump     & 7811 & trump      & 2510 \\
     2   & tax         & 5206 & said      & 7383 & said       & 2009 \\
     3   & will        & 4098 & president & 3997 & president  & 1730 \\
@@ -13,6 +15,4 @@
     9   & new         & 2566 & democrats & 1963 & told       & 862  \\
     10  & care        & 2565 & campaign  & 1933 & border     & 790 \\ \hline
     \end{tabular}
-    \caption{Word Frequencies}
-    \label{tab:1gram}
 \end{table}
